--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sfdmu-all-purpose-migration",
-  "displayName": "SFDMU All-Purpose Migration",
+  "name": "sfdmu-all-purpose-migration-utility",
+  "displayName": "SFDMU All-Purpose Migration Utility",
   "description": "Visual interface for configuring and executing SFDMU scripts to migrate objects or CPQ data between Salesforce orgs",
   "version": "0.1.3",
   "publisher": "JackHuffman",
